--- a/Eureka Server/Eureka-Server/src/main/resources/application.properties
+++ b/Eureka Server/Eureka-Server/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=Eureka-Server
+server.port=8761
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+spring.application.name=server
+eureka.client.serviceUrl.defaultZone=http://eureka-user:12345678@localhost:8761/eureka/
