--- a/Gateway/Gateway/src/main/resources/application.properties
+++ b/Gateway/Gateway/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=Gateway
+server.port=8080
+eureka.client.serviceUrl.defaultZone=http://eureka-user:12345678@localhost:8761/eureka/
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+spring.application.name=gateway
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lowerCaseServiceId=true
