--- a/player-microservice/src/main/resources/application.properties
+++ b/player-microservice/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=player-microservice
+spring.application.name=player-ms
+eureka.client.serviceUrl.defaultZone=http://eureka-user:12345678@localhost:8761/eureka/
+server.port=0
+eureka.instance.instanceId=${spring.application.name}:${spring.application.instance_id:${random.value}}
+eureka.instance.prefer-ip-address=false
