feat: Player Microservice - Implement controller-service-repository layers

--- a/player-microservice/src/main/resources/application.properties
+++ b/player-microservice/src/main/resources/application.properties
@@ -3,3 +3,17 @@ eureka.client.serviceUrl.defaultZone=http://eureka-user:12345678@localhost:8761/
 server.port=0
 eureka.instance.instanceId=${spring.application.name}:${spring.application.instance_id:${random.value}}
 eureka.instance.prefer-ip-address=false
+
+# Datasource
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# JPA
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+# H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
