--- a/player-microservice/pom.xml
+++ b/player-microservice/pom.xml
@@ -47,14 +47,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-			
-		
+				
 	   <dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
@@ -65,6 +58,13 @@
      		 <artifactId>h2</artifactId>
      		 <scope>runtime</scope>
    	    </dependency>
+   	    
+   	    <dependency>
+  		  <groupId>org.modelmapper</groupId>
+  		  <artifactId>modelmapper</artifactId>
+ 		   <version>3.1.0</version>
+		</dependency>
+
 	   	
 	</dependencies>
 	
