--- a/registration-microservice/pom.xml
+++ b/registration-microservice/pom.xml
@@ -88,6 +88,19 @@
 			<version>2.3.1</version>
 		</dependency>
 
+		<!-- Jackson Core -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.13.1</version>
+		</dependency>
+		<!-- Jackson Databind -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.13.1</version>
+		</dependency>
+
 
 	</dependencies>
 
