--- a/Gateway/Gateway/src/main/resources/application.properties
+++ b/Gateway/Gateway/src/main/resources/application.properties
@@ -5,3 +5,9 @@ eureka.client.register-with-eureka=true
 spring.application.name=gateway
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lowerCaseServiceId=true
+
+
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-origins=http://localhost:4200
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-headers=*
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allow-credentials=true
