--- a/registration-microservice/src/main/resources/application.properties
+++ b/registration-microservice/src/main/resources/application.properties
@@ -19,3 +19,9 @@ spring.jpa.hibernate.ddl-auto=update
 # H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-origins=http://localhost:4200
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-headers=*
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allow-credentials=true
