--- a/registration-microservice/src/main/resources/application.properties
+++ b/registration-microservice/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 spring.application.name=registration-ms
+
+# Eureka
 eureka.client.serviceUrl.defaultZone=http://eureka-user:12345678@localhost:8761/eureka/
 server.port=0
 eureka.instance.instanceId=${spring.application.name}:${spring.application.instance_id:${random.value}}
 eureka.instance.prefer-ip-address=false
+
+# Variaveis
 URLJSON=https://raw.githubusercontent.com/uolhost/test-backEnd-Java/master/referencias/vingadores.json
 URLXML=https://raw.githubusercontent.com/uolhost/test-backEnd-Java/master/referencias/liga_da_justica.xml
 
-# Datasource
+# Data source
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -20,7 +24,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-
+# Cors
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-origins=http://localhost:4200
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-headers=*
