--- a/player-microservice/src/main/resources/application.properties
+++ b/player-microservice/src/main/resources/application.properties
@@ -22,3 +22,7 @@ spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-origins=http:/
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-headers=*
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allow-credentials=true
+
+#Swagger
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
