--- a/registration-microservice/pom.xml
+++ b/registration-microservice/pom.xml
@@ -102,6 +102,12 @@
 			<version>2.13.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.8</version>
+		</dependency>
+
 
 	</dependencies>
 
